--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div ng-app="app" class="app">
         <div ng-controller="ContactController as vm">
             <ul>
-                <li>
+                <li ng-repeat="contact in vm.contacts">
                     <h4>Name: {{ contact.name }}</h4>
                     <h6>Phone: {{ contact.phone }}</h6>
 
