--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <h4>Name: {{ contact.name }}</h4>
                     <h6>Phone: {{ contact.phone }}</h6>
 
-                    <a href="">Delete</a>
+                    <a href="" ng-click="vm.removeContact($index)">Delete</a>
                 </li>
             </ul>
 
