refactor ng-click to reference updated ng-model values

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <label>Phone</label>
                     <input ng-model="vm.phoneNumber"/>
                 </div>
-                <button type="submit" ng-click="vm.addContact(name, phoneNumber)">Add Contact</button>
+                <button type="submit" ng-click="vm.addContact(vm.name, vm.phoneNumber)">Add Contact</button>
             </form>
         </div>
     </div>
